compilation is DONE with only modifs of classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,8 @@ endif()
 project(University-db)
 enable_testing()
 
-add_executable(${PROJECT_NAME} main.cpp db.cpp student.cpp)
-add_executable(${PROJECT_NAME}-ut test.cpp db.cpp student.cpp)
+add_executable(${PROJECT_NAME} main.cpp db.cpp person.cpp)
+add_executable(${PROJECT_NAME}-ut test.cpp db.cpp person.cpp)
 
 add_compile_options(${PROJECT_NAME} -Wall -Wextra -Wconversion -pedantic -Werror)
 
